--- a/ShoutOut/Base.lproj/Main.storyboard
+++ b/ShoutOut/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5AF-fT-hY6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="XMs-lG-9gv">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -254,10 +254,28 @@ Just thought this deserved a shout out. Great work, Jane!
             </objects>
             <point key="canvasLocation" x="1628" y="-477.21139430284859"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="hIL-El-65v">
+            <objects>
+                <viewController id="XMs-lG-9gv" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hOE-9K-1Ys"/>
+                        <viewControllerLayoutGuide type="bottom" id="det-pr-HPY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mt6-ih-Q7d">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pbn-b1-NIc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-823" y="55"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="TYz-Os-EIO">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5AF-fT-hY6" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="rootViewController" automaticallyAdjustsScrollViewInsets="NO" id="5AF-fT-hY6" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="rC0-3N-WPh">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
